--- a/html-css - modulo2/Desafiomod2/index.html
+++ b/html-css - modulo2/Desafiomod2/index.html
@@ -425,5 +425,6 @@ footer a:hover{
         target="_blank"><em>CursoemVideo</em></a>
         </p>
     </footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
