--- a/html-css-modulo3/ex022/fundo005.html
+++ b/html-css-modulo3/ex022/fundo005.html
@@ -8,6 +8,9 @@
     <style>
         body{
             background-image: url('imagens/wallpaper003.jpg');
+            background-position: right bottom;
+            border: 1px dashed black;
+            height: 98vh;
         }
     </style>
 </head>
