--- a/html-css-modulo3/ex022/fundo006.html
+++ b/html-css-modulo3/ex022/fundo006.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body{
             height: 100vh;
+            /*
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-repeat: no-repeat;
-            background-position: center top;
+            background-position: center center;
             background-size: cover;
+            background-attachment: fixed;
+            */
+            background-size: cover;
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
         }
         main{
             text-align: center;
             background-color: white;
             margin: auto;
-            width: 400px;
+            max-width: 400px;
             padding: 5px;
             border: 1px solid darkblue;
             border-radius: 10px;
@@ -28,6 +33,31 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse sapiente, quod quia temporibus dolore quisquam ad id ullam reiciendis facilis expedita eius earum itaque enim eum, explicabo, minima placeat facere?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni et earum incidunt quaerat, dolorem, nemo illum placeat ullam, esse accusamus? Quisquam ab cumque, ratione nihil sequi debitis vel! Voluptas?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore doloribus dolorem facere nesciunt aut omnis consectetur doloremque, natus quia dolorum voluptate quae sit dicta debitis illo saepe! Sint, consequuntur.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores eum eveniet voluptatum, unde qui veritatis veniam facilis expedita quos voluptatibus officia officiis odio vero ad temporibus nobis numquam perspiciatis? Tempora!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse sapiente, quod quia temporibus dolore quisquam ad id ullam reiciendis facilis expedita eius earum itaque enim eum, explicabo, minima placeat facere?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni et earum incidunt quaerat, dolorem, nemo illum placeat ullam, esse accusamus? Quisquam ab cumque, ratione nihil sequi debitis vel! Voluptas?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore doloribus dolorem facere nesciunt aut omnis consectetur doloremque, natus quia dolorum voluptate quae sit dicta debitis illo saepe! Sint, consequuntur.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores eum eveniet voluptatum, unde qui veritatis veniam facilis expedita quos voluptatibus officia officiis odio vero ad temporibus nobis numquam perspiciatis? Tempora!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse sapiente, quod quia temporibus dolore quisquam ad id ullam reiciendis facilis expedita eius earum itaque enim eum, explicabo, minima placeat facere?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni et earum incidunt quaerat, dolorem, nemo illum placeat ullam, esse accusamus? Quisquam ab cumque, ratione nihil sequi debitis vel! Voluptas?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore doloribus dolorem facere nesciunt aut omnis consectetur doloremque, natus quia dolorum voluptate quae sit dicta debitis illo saepe! Sint, consequuntur.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores eum eveniet voluptatum, unde qui veritatis veniam facilis expedita quos voluptatibus officia officiis odio vero ad temporibus nobis numquam perspiciatis? Tempora!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse sapiente, quod quia temporibus dolore quisquam ad id ullam reiciendis facilis expedita eius earum itaque enim eum, explicabo, minima placeat facere?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni et earum incidunt quaerat, dolorem, nemo illum placeat ullam, esse accusamus? Quisquam ab cumque, ratione nihil sequi debitis vel! Voluptas?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore doloribus dolorem facere nesciunt aut omnis consectetur doloremque, natus quia dolorum voluptate quae sit dicta debitis illo saepe! Sint, consequuntur.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores eum eveniet voluptatum, unde qui veritatis veniam facilis expedita quos voluptatibus officia officiis odio vero ad temporibus nobis numquam perspiciatis? Tempora!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse sapiente, quod quia temporibus dolore quisquam ad id ullam reiciendis facilis expedita eius earum itaque enim eum, explicabo, minima placeat facere?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni et earum incidunt quaerat, dolorem, nemo illum placeat ullam, esse accusamus? Quisquam ab cumque, ratione nihil sequi debitis vel! Voluptas?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore doloribus dolorem facere nesciunt aut omnis consectetur doloremque, natus quia dolorum voluptate quae sit dicta debitis illo saepe! Sint, consequuntur.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores eum eveniet voluptatum, unde qui veritatis veniam facilis expedita quos voluptatibus officia officiis odio vero ad temporibus nobis numquam perspiciatis? Tempora!
+        </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse sapiente, quod quia temporibus dolore quisquam ad id ullam reiciendis facilis expedita eius earum itaque enim eum, explicabo, minima placeat facere?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni et earum incidunt quaerat, dolorem, nemo illum placeat ullam, esse accusamus? Quisquam ab cumque, ratione nihil sequi debitis vel! Voluptas?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore doloribus dolorem facere nesciunt aut omnis consectetur doloremque, natus quia dolorum voluptate quae sit dicta debitis illo saepe! Sint, consequuntur.
